# signal-market-terminal

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODEX_START_HERE.md  Makefile  README.md  docker-compose.oracle-micro.yml  docker-compose.polymarket-capture.yml  docker-compose.prod.yml  docker-compose.yml  entities.json  mempalace.yaml  package.json
backend/: .env.example  .env.oracle-micro.example  .env.polymarket-capture.example  Dockerfile.prod  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: alpha_rule_specs.py  config.py  db.py  default_strategy.py  main.py  metrics.py  strategy_families.py  worker.py
backend/tests/: conftest.py  test_alert_integration.py  test_alerts.py  test_alpha_factory.py  test_alpha_gauntlet.py  test_alpha_rule_paper_lane.py  test_api.py  test_api_coverage.py  test_arbitrage.py  test_backtest.py  test_backtest_integration.py  test_ci_workflow.py  test_circuit_breaker.py  test_cleanup.py  test_clv.py  test_config.py  test_confluence.py  test_connectors.py  test_deadline_near.py  test_default_strategy_measurement.py  test_deployment_profiles.py  test_detectors.py  test_discord_alert.py  test_ev.py  test_evaluation.py  test_evidence_freshness.py  test_ingestion.py  test_integration.py  test_kalshi_cheap_yes_follow.py  test_kalshi_down_yes_fade.py  test_kalshi_lane_pulse.py  test_kalshi_low_yes_fade.py  test_kalshi_very_low_yes_fade.py  test_kelly.py  test_liquidity_vacuum.py  test_multi_timeframe.py  test_multi_timeframe_integration.py  test_order_flow.py  test_paper_trading.py  (+46 more)
(+317 files in other folders)
